--- a/mission.css
+++ b/mission.css
@@ -27,7 +27,18 @@ body {
   background: #5A65EF;
 }
 
-#slogan {
+#statement {
+  display: flex;
+  font-size: 15px;
+  font-family: "monaco";
+  color: #FFF;
+  font-weight: 100;
+  padding: 5px;
+  text-align: center;
+  height: 50vh;
+}
+
+#title {
   display: flex;
   font-size: 20px;
   font-family: "monaco";
