--- a/info.css
+++ b/info.css
@@ -2,7 +2,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  background: #5A65EF;
+  background: #8ABD91;
 }
 
 .fcheader {
@@ -27,7 +27,7 @@ body {
   background: #5A65EF;
 }
 
-#slogan {
+#slogan, #prevention {
   display: flex;
   font-size: 20px;
   font-family: "monaco";
@@ -36,6 +36,17 @@ body {
   padding: 5px;
   text-align: center;
   height: 50vh;
+}
+
+#title {
+
+  font-size: 20px;
+  font-family: "monaco";
+  color: #FFF;
+  font-weight: 100;
+  padding: 5px;
+  text-align: center;
+
 }
 
 .nav {
@@ -52,7 +63,7 @@ body {
 }
 
 .button {
-  background: #5A65EF;
+  background: #8ABD91;
   color: white;
   font-family: "monaco", "garamond";
   font-size: 25px;
@@ -76,22 +87,30 @@ body {
 }
 
 #home:hover {
-  background: #000;
+  background: #FFFFFF;
 }
 #mission:hover {
-  background: #EF5AB0;
+  background: #FFFFFF;
 }
 
 #info:hover {
-  background: #EFE45A;
+  background: #FFF;
 }
 
 #map:hover {
-  background: #5AEF9A;
+  background: #FFF;
+}
+
+#shop:hover {
+  background: #FFF;
 }
 
 #forum:hover {
-  background: #EF9A5A;
+  background: #FFF;
+}
+
+#faq:hover {
+  background: #FFF;
 }
 
 .fcfooter {
