--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ body {
 }
 
 .button:hover {
+  background: #B4CBB7;
   font-family: "monaco", "garamond";
   font-size: 27.5px;
   font-weight: 500;
@@ -75,32 +76,6 @@ body {
   border: 0.5px;
 }
 
-#home:hover {
-  background: #FFFFFF;
-}
-#mission:hover {
-  background: #FFFFFF;
-}
-
-#info:hover {
-  background: #FFF;
-}
-
-#map:hover {
-  background: #FFF;
-}
-
-#shop:hover {
-  background: #FFF;
-}
-
-#forum:hover {
-  background: #FFF;
-}
-
-#faq:hover {
-  background: #FFF;
-}
 .fcfooter {
   display: flex;
   height: 300px;
