--- a/info.css
+++ b/info.css
@@ -27,7 +27,7 @@ body {
   background: #5A65EF;
 }
 
-#slogan, #prevention {
+#slogan {
   display: flex;
   font-size: 20px;
   font-family: "monaco";
@@ -36,6 +36,17 @@ body {
   padding: 5px;
   text-align: center;
   height: 50vh;
+}
+
+#prevention {
+
+  font-size: 15px;
+  font-family: "monaco";
+  color: #FFF;
+  font-weight: 100;
+  padding: 5px;
+  text-align: center;
+
 }
 
 #title {
@@ -77,6 +88,7 @@ body {
 }
 
 .button:hover {
+  background: #B4CBB7;
   font-family: "monaco", "garamond";
   font-size: 27.5px;
   font-weight: 500;
@@ -84,33 +96,6 @@ body {
   width: 550px;
   float: left;
   border: 0.5px;
-}
-
-#home:hover {
-  background: #FFFFFF;
-}
-#mission:hover {
-  background: #FFFFFF;
-}
-
-#info:hover {
-  background: #FFF;
-}
-
-#map:hover {
-  background: #FFF;
-}
-
-#shop:hover {
-  background: #FFF;
-}
-
-#forum:hover {
-  background: #FFF;
-}
-
-#faq:hover {
-  background: #FFF;
 }
 
 .fcfooter {
