--- a/shop.css
+++ b/shop.css
@@ -77,6 +77,7 @@ body {
 }
 
 .button:hover {
+  background: #B4CBB7;
   font-family: "monaco", "garamond";
   font-size: 27.5px;
   font-weight: 500;
@@ -84,33 +85,6 @@ body {
   width: 550px;
   float: left;
   border: 0.5px;
-}
-
-#home:hover {
-  background: #FFFFFF;
-}
-#mission:hover {
-  background: #FFFFFF;
-}
-
-#info:hover {
-  background: #FFF;
-}
-
-#map:hover {
-  background: #FFF;
-}
-
-#shop:hover {
-  background: #FFF;
-}
-
-#forum:hover {
-  background: #FFF;
-}
-
-#faq:hover {
-  background: #FFF;
 }
 
 .fcfooter {
