--- a/forum.css
+++ b/forum.css
@@ -5,12 +5,8 @@ body {
   background: #8ABD91;
 }
 
-.fcheader {
-  display: flex;
-  flex-direction: column;
-  height: 50vh;
-  align-items: stretch;
-  background: center / cover no-repeat
+#new {
+  background:#3376FF;
 }
 
 .fcslogan {
@@ -77,7 +73,6 @@ body {
 }
 
 .button:hover {
-  background: #B4CBB7;
   font-family: "monaco", "garamond";
   font-size: 27.5px;
   font-weight: 500;
@@ -85,6 +80,33 @@ body {
   width: 550px;
   float: left;
   border: 0.5px;
+}
+
+#home:hover {
+  background: #FFFFFF;
+}
+#mission:hover {
+  background: #FFFFFF;
+}
+
+#info:hover {
+  background: #FFF;
+}
+
+#map:hover {
+  background: #FFF;
+}
+
+#shop:hover {
+  background: #FFF;
+}
+
+#forum:hover {
+  background: #FFF;
+}
+
+#faq:hover {
+  background: #FFF;
 }
 
 .fcfooter {
