--- a/forum.css
+++ b/forum.css
@@ -7,6 +7,7 @@ body {
 
 #new {
   background:#3376FF;
+  float: right;
 }
 
 .fcslogan {
@@ -24,13 +25,12 @@ body {
 }
 
 #slogan {
-  display: flex;
   font-size: 20px;
   font-family: "monaco";
   color: #FFF;
   font-weight: 100;
   padding: 5px;
-  text-align: center;
+  text-align: left;
   height: 50vh;
 }
 
@@ -41,7 +41,7 @@ body {
   color: #FFF;
   font-weight: 100;
   padding: 5px;
-  text-align: center;
+  text-align: left;
 
 }
 
@@ -49,6 +49,7 @@ body {
   display: flex;
   flex-shrink: 1;
   background-color: rgba(0, 0, 0, 0);
+
 }
 
 .fcbuttons {
