--- a/shop.css
+++ b/shop.css
@@ -28,23 +28,23 @@ body {
 }
 
 #slogan {
-  display: flex;
-  font-size: 20px;
+  /* display: flex;  */
+  font-size: 30px;
   font-family: "monaco";
-  color: #FFF;
+  color: #649963;
   font-weight: 100;
   padding: 5px;
   text-align: center;
-  height: 50vh;
+  height: 20vh;
 }
 
 #title {
 
-  font-size: 20px;
+  font-size: 50px;
   font-family: "monaco";
   color: #FFF;
-  font-weight: 100;
-  padding: 5px;
+  font-weight: 30;
+  padding: 0px;
   text-align: center;
 
 }
@@ -97,4 +97,75 @@ body {
   font-size: 10px;
   color: white;
   font-family: "monaco", "garamond";
+}
+
+
+.picture1 {
+    text-align: center;
+    width : 100%;
+    display: block;
+}
+
+.picture2 {
+  text-align: center;
+  width : 100%;
+  display: block;
+}
+
+.picture3 {
+  text-align: center;
+  width : 100%;
+  display: block;
+}
+
+.picture4 {
+  text-align: center;
+  width : 100%;
+  display: block;
+}
+
+.picture5 {
+  text-align: center;
+  width : 100%;
+  display: block;
+}
+
+
+.overlay {
+  position: relative; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(109, 158, 115, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 40%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  float: center;
+  font-size: 20px;
+  padding: 20px;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
+
+.picture1:hover .overlay {
+  opacity: 1;
+}
+
+.picture2:hover .overlay {
+  opacity: 1;
+}
+
+.picture3:hover .overlay {
+  opacity: 1;
+}
+
+.picture4:hover .overlay {
+  opacity: 1;
+}
+
+.picture5:hover .overlay {
+  opacity: 1;
 }
