--- a/forum2.css
+++ b/forum2.css
@@ -8,30 +8,43 @@ body {
   h2 {
       font-size:30px;
       font-style: bold;
+
+      color: white;
+      font-family: "monaco", "garamond";
+      font-size: 25px;
   }
 
   textarea {
     width: 70%;
     font-size: 24px;
+
+    color: white;
+    font-family: "monaco", "garamond";
+    font-size: 25px;
   }
 
   #name {
       font-size:24px;
       width: 50%;
   }
-  
+
   #submit {
     background-color:#3376FF;
     color: #FFFFFF;
     margin: 10px;
     font-size: 24px;
     padding: 15px, 32px;
+    background: #8ABD91;
+    color: white;
+    font-family: "monaco", "garamond";
+    font-size: 25px;
   }
 
   #submit:hover {
-      background-color: #1041A8;
+    background-color: white;
+    color: #3376FF;
   }
-  
+
   .fcslogan {
     justify-content: center;
     align-items: center;
@@ -40,12 +53,12 @@ body {
     text-align: center;
     background-color: rgba(0, 0, 0, 0);
   }
-  
+
   .button2 {
     color: white;
     background: #5A65EF;
   }
-  
+
   #slogan {
     font-size: 20px;
     font-family: "monaco";
@@ -55,32 +68,32 @@ body {
     text-align: left;
     height: 50vh;
   }
-  
+
   #title {
-  
+
     font-size: 20px;
     font-family: "monaco";
     color: #FFF;
     font-weight: 100;
     padding: 5px;
     text-align: left;
-  
+
   }
-  
+
   .nav {
     display: flex;
     flex-shrink: 1;
     background-color: rgba(0, 0, 0, 0);
-  
+
   }
-  
+
   .fcbuttons {
     justify-content: space-between;
     display: flex;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0);
   }
-  
+
   .button {
     background: #8ABD91;
     color: white;
@@ -94,7 +107,7 @@ body {
     border: 0.5px;
     transition-duration: 0.7s;
   }
-  
+
   .button:hover {
     font-family: "monaco", "garamond";
     font-size: 27.5px;
@@ -104,34 +117,34 @@ body {
     float: left;
     border: 0.5px;
   }
-  
+
   #home:hover {
     background: #FFFFFF;
   }
   #mission:hover {
     background: #FFFFFF;
   }
-  
+
   #info:hover {
     background: #FFF;
   }
-  
+
   #map:hover {
     background: #FFF;
   }
-  
+
   #shop:hover {
     background: #FFF;
   }
-  
+
   #forum:hover {
     background: #FFF;
   }
-  
+
   #faq:hover {
     background: #FFF;
   }
-  
+
   .fcfooter {
     display: flex;
     height: 300px;
@@ -143,4 +156,3 @@ body {
     color: white;
     font-family: "monaco", "garamond";
   }
-  
