--- a/map.css
+++ b/map.css
@@ -8,9 +8,9 @@ body {
 .fcheader {
   display: flex;
   flex-direction: column;
-  height: 50vh;
+  /* height: 50vh; */
   align-items: stretch;
-  background: center / cover no-repeat
+  text-size: 200px;
 }
 
 .fcslogan {
@@ -27,6 +27,12 @@ body {
   background: #5A65EF;
 }
 
+#jhmap {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
 #slogan {
   display: flex;
   font-size: 20px;
@@ -39,8 +45,8 @@ body {
 }
 
 #title {
+  font-size: 35px;
 
-  font-size: 20px;
   font-family: "monaco";
   color: #FFF;
   font-weight: 100;
