--- a/forum.css
+++ b/forum.css
@@ -64,6 +64,11 @@ body {
   background-color: rgba(0, 0, 0, 0);
 }
 
+#forumphp {
+  height: 100vh;
+  width: 100vw;
+}
+
 .button {
   background: #8ABD91;
   color: white;
