--- a/info.css
+++ b/info.css
@@ -8,7 +8,7 @@ body {
 .fcheader {
   display: flex;
   flex-direction: column;
-  height: 50vh;
+  height: 15vh;
   align-items: stretch;
   background: center / cover no-repeat
 }
@@ -51,10 +51,10 @@ body {
 
 #title {
 
-  font-size: 20px;
+  font-size: 50px;
   font-family: "monaco";
   color: #FFF;
-  font-weight: 100;
+  font-weight: 10;
   padding: 5px;
   text-align: center;
 
@@ -108,4 +108,20 @@ body {
   font-size: 10px;
   color: white;
   font-family: "monaco", "garamond";
+}
+
+.picture {
+  text-align: center;
+  position: relative;
+  color: white;
+  width : 100%;
+  display: block;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 100px;
+  transform: translate(-50%, -50%);
 }
