--- a/shop.css
+++ b/shop.css
@@ -144,7 +144,7 @@ body {
   float: center;
   font-size: 20px;
   padding: 20px;
-  height: 100%;
+  height: 7%;
   width: 100%;
   text-align: center;
 }
@@ -184,4 +184,15 @@ body {
   left: 50%;
   font-size: 100px;
   transform: translate(-50%, -50%);
+}
+
+#prevention {
+
+  font-size: 15px;
+  font-family: "monaco";
+  color: #FFF;
+  font-weight: 100;
+  padding: 5px;
+  text-align: center;
+
 }
