--- a/mission.css
+++ b/mission.css
@@ -1,18 +1,15 @@
-
 body {
   width: 100vw;
   height: 100vh;
   background: #8ABD91;
 }
-
 .fcheader {
   display: flex;
   flex-direction: column;
   height: 50vh;
   align-items: stretch;
-  background: center / cover no-repeat
+  background: center / cover no-repeat;
 }
-
 .fcslogan {
   justify-content: center;
   align-items: center;
@@ -21,49 +18,40 @@ body {
   text-align: center;
   background-color: rgba(0, 0, 0, 0);
 }
-
 .button2 {
   color: white;
   background: #5A65EF;
 }
-
 #statement {
   display: flex;
   font-size: 15px;
   font-family: "monaco";
-  color: #FFF;
+  color: #fff;
   font-weight: 100;
   padding: 5px;
   text-align: center;
   justify-content: center;
   height: 50vh;
 }
-
 #title {
-
   font-size: 20px;
   font-family: "monaco";
-  color: #FFF;
+  color: #fff;
   font-weight: 100;
   padding: 5px;
   text-align: center;
-
-
 }
-
 .nav {
   display: flex;
   flex-shrink: 1;
   background-color: rgba(0, 0, 0, 0);
 }
-
 .fcbuttons {
   justify-content: space-between;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0);
 }
-
 .button {
   background: #8ABD91;
   color: white;
@@ -77,7 +65,6 @@ body {
   border: 0.5px;
   transition-duration: 0.7s;
 }
-
 .button:hover {
   background: #B4CBB7;
   font-family: "monaco", "garamond";
@@ -88,7 +75,6 @@ body {
   float: left;
   border: 0.5px;
 }
-
 .fcfooter {
   display: flex;
   height: 300px;
@@ -99,4 +85,47 @@ body {
   font-size: 10px;
   color: white;
   font-family: "monaco", "garamond";
+}
+h2 {
+  margin-bottom: 25px;
+}
+.img-wrap {
+  padding-left: 50px;
+  width: 100%;
+ 
+  text-align: center;
+  display: block;
+}
+.img-wrap img {
+  width: 27%;
+  padding: 10px;
+  border-radius: 70%;
+  box-shadow: 0 0 100px #B4CBB7;
+}
+
+.picture {
+  text-align: center;
+  position: relative;
+  color: white;
+  width : 100%;
+  display: block;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 100px;
+  transform: translate(-50%, -50%);
+}
+
+#prevention {
+
+  font-size: 15px;
+  font-family: "monaco";
+  color: #FFF;
+  font-weight: 100;
+  padding: 5px;
+  text-align: center;
+
 }
