--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: 100%;
   background-position: center;
-  font-family: monocao;
+  font-family: "monaco";
 
   background: url(Runningpeople.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -24,6 +24,8 @@ body {
   position: absolute;
   top: 8px;
   right: 16px;
+  color: black;
+  font-family: "monaco";
 }
 
 .fcheader {
@@ -57,6 +59,7 @@ body {
   padding: 5px;
   text-align: center;
   height: 50vh;
+  margin-left: 20px;
 }
 
 .nav {
