--- a/mission.css
+++ b/mission.css
@@ -121,11 +121,22 @@ h2 {
 
 #prevention {
 
-  font-size: 15px;
+  font-size: 18px;
   font-family: "monaco";
   color: #FFF;
   font-weight: 100;
-  padding: 5px;
+  padding: 2px;
+  text-align: center;
+
+}
+
+#hi {
+
+  font-size: 20px;
+  font-family: "monaco";
+  color: #006600;
+  font-weight: 200;
+  padding: 2px;
   text-align: center;
 
 }
