--- a/shop.css
+++ b/shop.css
@@ -132,11 +132,11 @@ body {
 
 
 .overlay {
-  position: relative; 
-  bottom: 0; 
+  position: relative;
+  bottom: 0;
   background: rgb(0, 0, 0);
   background: rgba(109, 158, 115, 0.5); /* Black see-through */
-  color: #f1f1f1; 
+  color: #f1f1f1;
   width: 40%;
   transition: .5s ease;
   opacity:0;
@@ -179,11 +179,13 @@ body {
 }
 
 .centered {
+  
   position: absolute;
   top: 50%;
   left: 50%;
   font-size: 100px;
   transform: translate(-50%, -50%);
+  font-family: "monaco";
 }
 
 #prevention {
