--- a/mission.css
+++ b/mission.css
@@ -3,6 +3,15 @@ body {
   height: 100vh;
   background: #8ABD91;
 }
+
+/* .fcpage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+} */
+
 .fcheader {
   display: flex;
   flex-direction: column;
@@ -53,7 +62,7 @@ body {
   background-color: rgba(0, 0, 0, 0);
 }
 .button {
-  background: #8ABD91;
+  background: #8abd91;
   color: white;
   font-family: "monaco", "garamond";
   font-size: 25px;
@@ -65,8 +74,9 @@ body {
   border: 0.5px;
   transition-duration: 0.7s;
 }
+
 .button:hover {
-  background: #B4CBB7;
+  background: #b4cbb7;
   font-family: "monaco", "garamond";
   font-size: 27.5px;
   font-weight: 500;
@@ -77,7 +87,7 @@ body {
 }
 .fcfooter {
   display: flex;
-  height: 300px;
+  /* height: 300px; */
   flex-shrink: 1;
   flex-wrap: nowrap;
   justify-content: space-evenly;
@@ -138,14 +148,27 @@ h2 {
     padding: 10px;
 }
 
-#hi {
+#hi, #hicontainer {
 
   font-size: 20px;
   font-family: "monaco";
-  background-color: #b4cbb7;
-  color: white;
+  background-color: #8ABD91;
+  color: #1D812B;
   font-weight: 200;
   padding: 2px;
   text-align: center;
 
+}
+
+.fcfooter {
+  display: flex;
+  /* height: 300px; */
+  height: 10vh;
+  flex-shrink: 1;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 10px;
+  color: white;
+  font-family: "monaco", "garamond";
 }
