--- a/index.css
+++ b/index.css
@@ -94,6 +94,7 @@ body {
   float: center;
   border: 0.5px;
   transition-duration: 0.7s;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .button:hover {
