--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+.fcpage {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -24,6 +28,7 @@ body {
   font-size: 25px;
   color: white;
   font-family: "monaco", "garamond";
+
 }
 
 /* .top-left {
