--- a/shop.css
+++ b/shop.css
@@ -132,6 +132,7 @@ body {
 
 
 .overlay {
+  font-family: "monaco";
   position: relative;
   bottom: 0;
   background: rgb(0, 0, 0);
@@ -179,7 +180,7 @@ body {
 }
 
 .centered {
-  
+
   position: absolute;
   top: 50%;
   left: 50%;
