--- a/shop.css
+++ b/shop.css
@@ -108,7 +108,7 @@ body {
   margin-top: 100px;
   margin-bottom: 50px;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 395px;
   float:center;
   text-align: center;
   display: block;
@@ -122,7 +122,7 @@ body {
   width: 400px;
   height: auto;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 395px;
   text-align: center;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -136,7 +136,7 @@ body {
   margin: 50px;
   float:center;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 395px;
   width: 400px;
   display: block;
 }
@@ -147,7 +147,7 @@ body {
   margin: 50px;
   float:center;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 395px;
   width: 400px;
   display: block;
 }
@@ -158,7 +158,7 @@ body {
   margin: 50px;
   float:center;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 395px;
   width: 400px;
   display: block;
 }
